--- a/Dia2/styles.css
+++ b/Dia2/styles.css
@@ -1,18 +1,19 @@
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #2a63bf;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    flex-direction: column;
 }
 
 .container {
     text-align: center;
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -20,13 +21,13 @@ body {
 }
 
 h1 {
-    font-size: 1.8em;
-    color: #333;
+    font-size: 2em;
+    color: #00796b;
     margin-bottom: 20px;
 }
 
 button {
-    background-color: #28a745;
+    background-color: #00796b;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -37,7 +38,7 @@ button {
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #004d40;
 }
 
 button:focus {
